--- a/ObjectDetection/app/src/main/AndroidManifest.xml
+++ b/ObjectDetection/app/src/main/AndroidManifest.xml
@@ -2,14 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.pytorch.demo.objectdetection">
 
+
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <!-- ACCESS_FINE_LOCATION location accuracy 10 ft -160 ft-->
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
@@ -25,6 +32,11 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait">
         </activity>
+        <service
+            android:name="ObjectDetectionActivity"
+            android:foregroundServiceType="location" >
+        <!-- Any inner elements would go here. -->
+    </service>
     </application>
 
 </manifest>
