Code Tuning. 1. Logging to File is asynchronous. 2. Adjusted View Log File Button to center 3. Location Service is moved to Object Detection Class

--- a/RoadWarrior/app/src/main/AndroidManifest.xml
+++ b/RoadWarrior/app/src/main/AndroidManifest.xml
@@ -2,15 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.pytorch.demo.objectdetection">
 
-
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <!-- ACCESS_FINE_LOCATION location accuracy 10 ft -160 ft-->
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- ACCESS_FINE_LOCATION location accuracy 10 ft -160 ft-->
 
     <application
         android:allowBackup="true"
@@ -19,6 +15,7 @@
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewLogFileActivity"></activity>
         <activity android:name=".MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
